2007-05-13  Bruno Haible  <bruno@clisp.org>

	* gettext-po.c: Don't include vasprintf.h.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (MAINTAINERCLEANFILES): New variable.

2006-11-26  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h): When removing an object file, also remove
	the corresponding .lo file.

2006-11-26  Bruno Haible  <bruno@clisp.org>

	Support for VPATH builds.
	* Makefile.am (config.h): Don't prepend "$(srcdir)/" to the source
	file name if it is present in the build directory.

2006-11-03  Bruno Haible  <bruno@clisp.org>

	Simplify xmalloc expressions. Add overflow check in xmalloc arguments.
	* gettext-po.c (po_file_create, po_file_read): Use XMALLOC instead of
	xmalloc.
	(po_file_domains, po_header_field, po_header_set_field): Use XNMALLOC
	instead of xmalloc.
	(po_message_iterator: Use XMALLOC instead of xmalloc.

2006-10-29  Bruno Haible  <bruno@clisp.org>

	Don't name mangle exported symbols in C++ mode.
	* gettext-po.c (po_file_read_v2, po_file_read, po_file_write,
	po_message_check_format) [C++]: Declare as extern "C".

2006-11-27  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16.1 released.

2006-10-29  Bruno Haible  <bruno@clisp.org>

	* gettext-po.h.in (po_message_prev_msgctxt, po_message_set_prev_msgctxt,
	po_message_prev_msgid, po_message_set_prev_msgid,
	po_message_prev_msgid_plural, po_message_set_prev_msgid_plural): New
	declarations.

2006-10-28  Bruno Haible  <bruno@clisp.org>

	Fix for parallel makes.
	* Makefile.am (BUILT_SOURCES): Don't add config.h.
	(all, check, install): Depend on config.h.
	(config.h): Depend on the BUILT_SOURCES. Don't invoke make recursively.
	Reported by Ralf Wildenhues.

2006-10-26  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16 released.

2006-10-25  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h): If one of the three steps fails, remove
	config.h and fail.

2006-10-24  Bruno Haible  <bruno@clisp.org>
