@@ -1,3 +1,10 @@
+2007-05-28  Bruno Haible  <bruno@clisp.org>
+
+	* libgettextpo.rc: New file.
+	* Makefile.am (LDADD, WOE32_LDADD): New variables.
+	(libgettextpo.res): New rule.
+	(MOSTLYCLEANFILES): Add libgettextpo.res.
+
 2007-05-13  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-po.c: Don't include vasprintf.h.
